# LightScan

./: .gitignore  AGENT.md  CLAUDE.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_core_tables.py
backend/app/: main.py
backend/app/api/: tenant_guard.py
backend/app/auth/: jwt.py  rbac.py
backend/app/core/: plugin_rollout.py
backend/app/db/: session.py
backend/app/middleware/: audit_log.py
backend/app/models/: asset.py  event.py  finding.py  policy.py  project.py  scan_task.py  user.py  vuln_case.py  vuln_case_tag.py  vuln_tag.py
backend/app/plugins/: base.py  registry.py
backend/app/schemas/: aggregation.py  alert_rule.py  backup.py  batch_scan.py  discovery.py  job.py  notification.py  notification_template.py  operation_log.py  plugin.py  progress.py  project.py  reporting.py  risk_rules.py  scan_policy.py  scheduled_report.py  ticket.py  vuln_case.py  vuln_correlation.py  vuln_lifecycle.py  vuln_tag.py  webhook_subscription.py
backend/app/services/: aggregation_service.py  alert_rule_service.py  backup_service.py  batch_scan_service.py  dedup_service.py  discovery_service.py  event_service.py  job_policy_service.py  lifecycle_service.py  normalize_service.py  notification_adapters.py  notification_service.py  notification_template_service.py  operation_log_service.py  plugin_rollout_service.py  progress_service.py  project_service.py  reporting_service.py  risk_rules_service.py  risk_service.py  scan_policy_service.py  scan_service.py  (+8 more)
backend/tests/: conftest.py
(+206 files in other folders)
