[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightscan-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "sqlalchemy==2.0.35",
  "alembic==1.13.3",
  "psycopg[binary]==3.2.13",
  "celery==5.4.0",
  "redis==5.1.1",
  "pytest==8.3.3",
  "httpx==0.27.2",
  "ruff==0.6.9",
  "pytest-cov==5.0.0",
  "pyjwt==2.9.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using .*httpx.*starlette.testclient.*deprecated.*"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
